[Fix] hidden overflow element to hide scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   top: 0;
   bottom: 0;
   right: 0;
-  color: #31a1fd,
+  color: #31a1fd;
 }
 
 *:focus {
@@ -19,13 +19,16 @@
 
 section {
   position: absolute;
-  width: 100%;
-  height: 100vh;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(to bottom, #fbd7e3, #dff1ff);
   z-index: -1;
+  overflow: hidden;
 }
 
 section .color {
